--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,5 @@
-recursive-include pytrisk *.csv
-recursive-include pytrisk *.jpg
-recursive-include pytrisk *.pkl
-recursive-include pytrisk *.png
-recursive-include pytrisk *.ttf
-recursive-include pytrisk *.yaml
+recursive-include dvg_randomizer *.csv
+recursive-include dvg_randomizer *.jpg
+recursive-include dvg_randomizer *.png
+recursive-include dvg_randomizer *.ttf
+recursive-include dvg_randomizer *.yaml
