--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = '1.3.3'
 authors = [
   { name="Jerome Quelin", email="jquelin@gmail.com" },
 ]
-description = "classical Risk game"
+description = "Randomizer app for DVG Leader boardgames"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -20,6 +20,7 @@ dependencies = [
     "appdirs",
     "colorlog",
     "fpdf",
+    "pyexcel_ods",
 ]
 
 [project.scripts]
