provide ods file

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-recursive-include dvg_randomizer *.csv
+recursive-include dvg_randomizer *.ods
 recursive-include dvg_randomizer *.jpg
 recursive-include dvg_randomizer *.png
 recursive-include dvg_randomizer *.ttf
-recursive-include dvg_randomizer *.yaml
